# api/sheet.pb.go
@@ -31,7 +31,7 @@ var _ = math.Inf
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
 type LoadExcelReq struct {
-	GridKey              string   `protobuf:"bytes,1,opt,name=gridKey,proto3" json:"gridKey,omitempty"`
+	GridKey              string   `protobuf:"bytes,1,opt,name=gridKey,proto3" json:"gridKey,omitempty" form:"gridKey" validate:"required"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -71,7 +71,7 @@ func (m *LoadExcelReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_LoadExcelReq proto.InternalMessageInfo
 
 type LoadExcelResp struct {
-	Jsonstr              string   `protobuf:"bytes,1,opt,name=jsonstr,proto3" json:"jsonstr,omitempty"`
+	Content              string   `protobuf:"bytes,1,opt,name=content,proto3" json:"content,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -111,8 +111,8 @@ func (m *LoadExcelResp) XXX_DiscardUnknown() {
 var xxx_messageInfo_LoadExcelResp proto.InternalMessageInfo
 
 type LoadExcelSheetReq struct {
-	GridKey              string   `protobuf:"bytes,1,opt,name=gridKey,proto3" json:"gridKey,omitempty"`
-	Indexs               []string `protobuf:"bytes,2,rep,name=indexs,proto3" json:"indexs,omitempty"`
+	GridKey              string   `protobuf:"bytes,1,opt,name=gridKey,proto3" json:"gridKey,omitempty" form:"gridKey" validate:"required"`
+	Indexs               string   `protobuf:"bytes,2,opt,name=indexs,proto3" json:"indexs,omitempty" form:"index"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -152,7 +152,7 @@ func (m *LoadExcelSheetReq) XXX_DiscardUnknown() {
 var xxx_messageInfo_LoadExcelSheetReq proto.InternalMessageInfo
 
 type LoadExcelSheetResp struct {
-	Jsonstr              string   `protobuf:"bytes,1,opt,name=jsonstr,proto3" json:"jsonstr,omitempty"`
+	Content              string   `protobuf:"bytes,1,opt,name=content,proto3" json:"content,omitempty"`
 	XXX_NoUnkeyedLiteral struct{} `json:"-"`
 	XXX_unrecognized     []byte   `json:"-"`
 	XXX_sizecache        int32    `json:"-"`
@@ -201,27 +201,30 @@ func init() {
 func init() { proto.RegisterFile("sheet.proto", fileDescriptor_2edb8d084c32530c) }
 
 var fileDescriptor_2edb8d084c32530c = []byte{
-	// 310 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x84, 0x91, 0xbb, 0x4e, 0xc3, 0x30,
-	0x14, 0x86, 0xeb, 0x56, 0x14, 0xd5, 0xbd, 0x08, 0x0c, 0x42, 0x25, 0x42, 0xa6, 0x32, 0x0c, 0x65,
-	0xc0, 0x11, 0xf0, 0x06, 0x48, 0x9d, 0x60, 0x0a, 0x1b, 0x5b, 0x2e, 0xc6, 0x35, 0x2a, 0xb1, 0x89,
-	0xdd, 0xaa, 0xac, 0xbc, 0x02, 0x0b, 0x8f, 0xd4, 0x11, 0x89, 0x19, 0x09, 0x02, 0x0f, 0x82, 0xe2,
-	0x34, 0x55, 0xe8, 0x10, 0xb6, 0x7c, 0x39, 0x9f, 0xff, 0x73, 0x7c, 0x0c, 0xdb, 0x7a, 0xcc, 0x98,
-	0xa1, 0x2a, 0x91, 0x46, 0xa2, 0xad, 0x1c, 0x34, 0x4b, 0x66, 0x22, 0x64, 0x74, 0x76, 0xe6, 0x9c,
-	0x72, 0x61, 0xc6, 0xd3, 0x80, 0x86, 0xf2, 0xc1, 0xe5, 0x92, 0x4b, 0xd7, 0x8a, 0xc1, 0xf4, 0xce,
-	0x92, 0x05, 0xfb, 0x95, 0x07, 0x38, 0x07, 0x5c, 0x4a, 0x3e, 0x61, 0xae, 0xaf, 0x84, 0xeb, 0xc7,
-	0xb1, 0x34, 0xbe, 0x11, 0x32, 0xd6, 0x79, 0x95, 0x0c, 0x61, 0xe7, 0x5a, 0xfa, 0xd1, 0x68, 0x1e,
-	0xb2, 0x89, 0xc7, 0x1e, 0x51, 0x1f, 0x6e, 0xf2, 0x44, 0x44, 0x57, 0xec, 0xa9, 0x0f, 0x06, 0x60,
-	0xd8, 0xf2, 0x0a, 0x24, 0x27, 0xb0, 0x5b, 0x32, 0xb5, 0xca, 0xd4, 0x7b, 0x2d, 0x63, 0x6d, 0x92,
-	0x42, 0x5d, 0x22, 0x19, 0xc1, 0xed, 0x95, 0x7a, 0x93, 0x8d, 0x5f, 0x99, 0x8c, 0xf6, 0x60, 0x53,
-	0xc4, 0x11, 0x9b, 0xeb, 0x7e, 0x7d, 0xd0, 0x18, 0xb6, 0xbc, 0x25, 0x11, 0x0a, 0xd1, 0x7a, 0x4c,
-	0x55, 0xdb, 0xf3, 0x0f, 0x00, 0x37, 0xac, 0x87, 0x02, 0xd8, 0x5a, 0x9d, 0x44, 0x98, 0xae, 0xaf,
-	0x90, 0x96, 0xaf, 0xec, 0x1c, 0x56, 0xd6, 0xb5, 0x22, 0xbb, 0xcf, 0xef, 0x3f, 0x2f, 0xf5, 0x1e,
-	0xe9, 0xb0, 0xec, 0x97, 0x6b, 0x6d, 0x8d, 0x14, 0xec, 0xfd, 0x9d, 0x0e, 0x1d, 0x55, 0x04, 0x15,
-	0x6b, 0x70, 0x8e, 0xff, 0x97, 0xb4, 0x22, 0x3b, 0xb6, 0x65, 0x97, 0xb4, 0x4b, 0x2d, 0x2f, 0xf7,
-	0x17, 0x5f, 0xb8, 0xb6, 0x48, 0x31, 0x78, 0x4b, 0x31, 0xf8, 0x4c, 0x31, 0x78, 0xfd, 0xc6, 0xb5,
-	0xdb, 0x86, 0xaf, 0x44, 0xd0, 0xb4, 0xaf, 0x79, 0xf1, 0x1b, 0x00, 0x00, 0xff, 0xff, 0xb6, 0x12,
-	0xa0, 0x65, 0x3b, 0x02, 0x00, 0x00,
+	// 356 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xac, 0x92, 0x31, 0x4f, 0xfa, 0x40,
+	0x18, 0xc6, 0x29, 0xff, 0x00, 0xe1, 0x80, 0x7f, 0xf0, 0x5c, 0xb0, 0x31, 0x85, 0xbc, 0x1a, 0x83,
+	0x83, 0x6d, 0xd4, 0x8d, 0xc9, 0x90, 0x38, 0xe9, 0x60, 0xea, 0xa6, 0x53, 0x69, 0x5f, 0xca, 0x25,
+	0xd0, 0x3b, 0x7a, 0x07, 0xc1, 0xc9, 0xc4, 0xaf, 0xe0, 0xe2, 0x47, 0x62, 0x34, 0x31, 0x71, 0x24,
+	0x8a, 0x7e, 0x02, 0x3e, 0x81, 0xf1, 0x0a, 0x04, 0x19, 0x70, 0x71, 0xeb, 0xd3, 0xe7, 0x79, 0x7f,
+	0xf7, 0xf4, 0xed, 0x91, 0x82, 0xec, 0x20, 0x2a, 0x5b, 0xc4, 0x5c, 0x71, 0x5a, 0x4e, 0x84, 0xc4,
+	0x78, 0xc8, 0x7c, 0xb4, 0x87, 0xc7, 0xe6, 0x51, 0xc8, 0x54, 0x67, 0xd0, 0xb2, 0x7d, 0xde, 0x73,
+	0x42, 0x1e, 0x72, 0x47, 0x07, 0x5b, 0x83, 0xb6, 0x56, 0x5a, 0xe8, 0xa7, 0x04, 0x60, 0xee, 0x86,
+	0x9c, 0x87, 0x5d, 0x74, 0x3c, 0xc1, 0x1c, 0x2f, 0x8a, 0xb8, 0xf2, 0x14, 0xe3, 0x91, 0x4c, 0x5c,
+	0xb8, 0x22, 0xc5, 0x4b, 0xee, 0x05, 0xe7, 0x23, 0x1f, 0xbb, 0x2e, 0xf6, 0xe9, 0x19, 0xc9, 0x85,
+	0x31, 0x0b, 0x2e, 0xf0, 0xae, 0x62, 0xd4, 0x8c, 0x7a, 0xbe, 0x79, 0x30, 0x9b, 0x54, 0xa1, 0xcd,
+	0xe3, 0x5e, 0x03, 0xe6, 0x06, 0xd4, 0x86, 0x5e, 0x97, 0x05, 0x9e, 0xc2, 0x06, 0xc4, 0xd8, 0x1f,
+	0xb0, 0x18, 0x03, 0x70, 0x17, 0x63, 0x70, 0x48, 0x4a, 0x2b, 0x44, 0x29, 0x68, 0x85, 0xe4, 0x7c,
+	0x1e, 0x29, 0x8c, 0x54, 0x82, 0x74, 0x17, 0x12, 0xee, 0xc9, 0xd6, 0x32, 0x7a, 0xfd, 0xfd, 0x99,
+	0x7f, 0xd2, 0x80, 0xd6, 0x49, 0x96, 0x45, 0x01, 0x8e, 0x64, 0x25, 0xad, 0x01, 0xe5, 0xd9, 0xa4,
+	0x5a, 0x4c, 0x00, 0xfa, 0x3d, 0xb8, 0x73, 0x1f, 0x6c, 0x42, 0xd7, 0x0b, 0x6c, 0x2a, 0x7c, 0xf2,
+	0x6a, 0x90, 0x8c, 0xce, 0xd1, 0x5b, 0x92, 0x5f, 0x4e, 0x52, 0xcb, 0x5e, 0xff, 0x49, 0xf6, 0xea,
+	0x52, 0xcd, 0xea, 0x46, 0x5f, 0x0a, 0x28, 0x3d, 0xbc, 0x7c, 0x3e, 0xa6, 0x73, 0x90, 0x41, 0xcd,
+	0x13, 0xe4, 0xff, 0xcf, 0x5a, 0x74, 0x6f, 0x03, 0x61, 0xb1, 0x39, 0x73, 0xff, 0xf7, 0x90, 0x14,
+	0xb0, 0xad, 0xcf, 0x2a, 0x41, 0x41, 0x9f, 0xe5, 0xe8, 0x91, 0xe6, 0xce, 0xf8, 0xdd, 0x4a, 0x8d,
+	0xa7, 0x96, 0xf1, 0x3c, 0xb5, 0x8c, 0xb7, 0xa9, 0x65, 0x3c, 0x7d, 0x58, 0xa9, 0x9b, 0x7f, 0x9e,
+	0x60, 0xad, 0xac, 0xbe, 0x28, 0xa7, 0x5f, 0x01, 0x00, 0x00, 0xff, 0xff, 0x27, 0xe5, 0xa1, 0x2e,
+	0x96, 0x02, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -398,10 +401,10 @@ func (m *LoadExcelResp) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
-	if len(m.Jsonstr) > 0 {
-		i -= len(m.Jsonstr)
-		copy(dAtA[i:], m.Jsonstr)
-		i = encodeVarintSheet(dAtA, i, uint64(len(m.Jsonstr)))
+	if len(m.Content) > 0 {
+		i -= len(m.Content)
+		copy(dAtA[i:], m.Content)
+		i = encodeVarintSheet(dAtA, i, uint64(len(m.Content)))
 		i--
 		dAtA[i] = 0xa
 	}
@@ -433,13 +436,11 @@ func (m *LoadExcelSheetReq) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
 	if len(m.Indexs) > 0 {
-		for iNdEx := len(m.Indexs) - 1; iNdEx >= 0; iNdEx-- {
-			i -= len(m.Indexs[iNdEx])
-			copy(dAtA[i:], m.Indexs[iNdEx])
-			i = encodeVarintSheet(dAtA, i, uint64(len(m.Indexs[iNdEx])))
-			i--
-			dAtA[i] = 0x12
-		}
+		i -= len(m.Indexs)
+		copy(dAtA[i:], m.Indexs)
+		i = encodeVarintSheet(dAtA, i, uint64(len(m.Indexs)))
+		i--
+		dAtA[i] = 0x12
 	}
 	if len(m.GridKey) > 0 {
 		i -= len(m.GridKey)
@@ -475,10 +476,10 @@ func (m *LoadExcelSheetResp) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 		i -= len(m.XXX_unrecognized)
 		copy(dAtA[i:], m.XXX_unrecognized)
 	}
-	if len(m.Jsonstr) > 0 {
-		i -= len(m.Jsonstr)
-		copy(dAtA[i:], m.Jsonstr)
-		i = encodeVarintSheet(dAtA, i, uint64(len(m.Jsonstr)))
+	if len(m.Content) > 0 {
+		i -= len(m.Content)
+		copy(dAtA[i:], m.Content)
+		i = encodeVarintSheet(dAtA, i, uint64(len(m.Content)))
 		i--
 		dAtA[i] = 0xa
 	}
@@ -518,7 +519,7 @@ func (m *LoadExcelResp) Size() (n int) {
 	}
 	var l int
 	_ = l
-	l = len(m.Jsonstr)
+	l = len(m.Content)
 	if l > 0 {
 		n += 1 + l + sovSheet(uint64(l))
 	}
@@ -538,11 +539,9 @@ func (m *LoadExcelSheetReq) Size() (n int) {
 	if l > 0 {
 		n += 1 + l + sovSheet(uint64(l))
 	}
-	if len(m.Indexs) > 0 {
-		for _, s := range m.Indexs {
-			l = len(s)
-			n += 1 + l + sovSheet(uint64(l))
-		}
+	l = len(m.Indexs)
+	if l > 0 {
+		n += 1 + l + sovSheet(uint64(l))
 	}
 	if m.XXX_unrecognized != nil {
 		n += len(m.XXX_unrecognized)
@@ -556,7 +555,7 @@ func (m *LoadExcelSheetResp) Size() (n int) {
 	}
 	var l int
 	_ = l
-	l = len(m.Jsonstr)
+	l = len(m.Content)
 	if l > 0 {
 		n += 1 + l + sovSheet(uint64(l))
 	}
@@ -689,7 +688,7 @@ func (m *LoadExcelResp) Unmarshal(dAtA []byte) error {
 		switch fieldNum {
 		case 1:
 			if wireType != 2 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Jsonstr", wireType)
+				return fmt.Errorf("proto: wrong wireType = %d for field Content", wireType)
 			}
 			var stringLen uint64
 			for shift := uint(0); ; shift += 7 {
@@ -717,7 +716,7 @@ func (m *LoadExcelResp) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Jsonstr = string(dAtA[iNdEx:postIndex])
+			m.Content = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
@@ -835,7 +834,7 @@ func (m *LoadExcelSheetReq) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Indexs = append(m.Indexs, string(dAtA[iNdEx:postIndex]))
+			m.Indexs = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
@@ -893,7 +892,7 @@ func (m *LoadExcelSheetResp) Unmarshal(dAtA []byte) error {
 		switch fieldNum {
 		case 1:
 			if wireType != 2 {
-				return fmt.Errorf("proto: wrong wireType = %d for field Jsonstr", wireType)
+				return fmt.Errorf("proto: wrong wireType = %d for field Content", wireType)
 			}
 			var stringLen uint64
 			for shift := uint(0); ; shift += 7 {
@@ -921,7 +920,7 @@ func (m *LoadExcelSheetResp) Unmarshal(dAtA []byte) error {
 			if postIndex > l {
 				return io.ErrUnexpectedEOF
 			}
-			m.Jsonstr = string(dAtA[iNdEx:postIndex])
+			m.Content = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
 		default:
 			iNdEx = preIndex
